MARP-4385: StackOverflowError for CallSub process (#184)
* Update maven-publish-snap.yml

* Check signatue of callable process

---------

Co-authored-by: Hoan Nguyen Quoc <nqhoan@axonactive.com>